<resources>

    <string name="app_name">HOMiE</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_chats">Chats</string>
    <string name="title_profile_view">Profile</string>
    <string name="title_match">Match with a Homie!</string>
    <string name="title_edit_profile">Edit Profile</string>

    <!-- CHAT -->
    <string name="chats_empty_warning"><b>Oh No!</b>\n\nYou don\'t have any Homies to chat with!\nGo Match with someone\n<b>→</b></string>
    <string name="chat_back_button_description">Back Button</string>
    <string name="chat_input_hint">Compose Message</string>
    <string name="chat_send_button_description">Send Message Button</string>
    <string name="chat_message_sent_toast">Message Sent!</string>
    <!-- CHAT -->

    <!-- MATCH VIEW -->
    <string name="profile_view_match_accept_description">Accept this Homie!</string>
    <string name="profile_view_match_reject_description">Reject this Homie</string>
    <string name="profile_view_match_accept">➕</string>
    <string name="profile_view_match_reject">✖</string>
    <string name="profile_view_match_celebration">You matched with a Homie!</string>
    <!-- MATCH VIEW -->

    <!-- STATIC PROFILE VIEW -->
    <string name="profile_view_avatar_content_description">User Avatar</string>
    <string name="profile_view_bathroom_yes_place_yes">Has a private bathroom?  ✓</string>
    <string name="profile_view_bathroom_yes_place_no">Wants a private bathroom?  ✓</string>
    <string name="profile_view_bathroom_no_place_yes">Has a private bathroom?  ✖</string>
    <string name="profile_view_bathroom_no_place_no">Wants a private bathroom?  ✖</string>
    <string name="profile_view_pets_yes">Pet Friendly?  ✓</string>
    <string name="profile_view_pets_no">Pet Friendly?  ✖</string>
    <string name="profile_view_smoking_yes">Smoking?  🚬</string>
    <string name="profile_view_smoking_no">Smoking?  🚭</string>
    <string name="profile_view_min_price_title"><u>Min Price</u></string>
    <string name="profile_view_max_price_title"><u>Max Price</u></string>
    <string name="profile_view_min_price_value_placeholder">$0</string>
    <string name="profile_view_max_price_value_placeholder">$$$$</string>
    <string name="profile_view_radius_placeholder">Finding Homies within <b>∞</b> miles</string>
    <string name="profile_view_gender_female">Prefers Female Roommates</string>
    <string name="profile_view_gender_male">Prefers Male Roommates</string>
    <string name="profile_view_gender_none">Has No Roommate Gender Preference</string>
    <!-- STATIC PROFILE VIEW -->

    <!-- EDIT PROFILE SETTINGS -->
    <string name="field_ProfilePhoto_text">Profile Photo:</string>
    <string name="field_Name_text">Name </string>
    <string name="field_Email_text">Email</string>
    <string name="field_Password_text">Password</string>
    <string name="field_HousingSearchOptions_text">Do you have housing</string>
    <string name="field_GenderPref_text">Do you have a preference for the gender of your roommate?</string>
    <string name="field_HousingImage_text">Spark your future roommate\'s interest by sharing photos of your home.</string>
    <string name="field_Address_text">Point of Interest Address</string>
    <string name="field_Radius_text">Search Radius</string>
    <string name="field_Budget_text">Budget</string>
    <string name="saved_preferences">SavedPreferences</string>
    <string name="button_Save_text">Save</string>
    <string name="button_Cancel_text">Cancel</string>
    <string name="avatar_description">Change Avatar</string>
    <string name="button_ChangePhoto_text">Change Avatar</string>
    <string name="button_ChangeHousingPhoto_text">Add photos</string>
    <string name="edit_Name_hint">Your Name</string>
    <string name="edit_Email_hint">Your Email</string>
    <string name="edit_Password_hint">New Password</string>
    <string name="edit_Address_hint">Point of Interest</string>
    <string name="edit_Radius_hint">Max. Distance from Point of Interest</string>
    <string name="edit_BudgetMin_hint">Min. Price</string>
    <string name="edit_BudgetMax_hint">Max. Price</string>
    <string name="radio_Female_text">Female</string>
    <string name="radio_Male_text">Male</string>
    <string name="radio_NoPref_text">No Preference</string>
    <string-array name="spinner_HousingSearchOptions">
        <item>Looking for Housing </item>
        <item>Have Housing. Just looking for a Roommate. </item>
    </string-array>
    <string name="switch_NoneSmoking">No Smoking</string>
    <string name="switch_PetFriendly">Pet-friendly</string>
    <string name="switch_PrivateBathroom">Private Bathroom</string>
    <string name="image_content_desc">Select Profile Photo from Camera or Gallery</string>
    <string name="toast_saved">Profile changes saved.</string>
    <string name="key_filename">prefKey_filename</string>
    <string name="key_name">prefKey_name</string>
    <string name="key_email">prefKey_email</string>
    <string name="key_password">prefKey_password</string>
    <string name="key_genderpref">prefKey_genderPref</string>
    <string name="key_petFriendly">prefKey_petFriendly</string>
    <string name="key_noneSmoking">prefKey_noneSmoking</string>
    <string name="key_privateBathroom">prefKey_privateBathroom</string>
    <string name="key_lookingForHousing">prefKey_lookingForHousing</string>
    <string name="key_housingImg">prefKey_housingImg</string>
    <string name="key_address">prefKey_address</string>
    <string name="key_radius">prefKey_radius</string>
    <string name="key_minBudget">prefKey_minBudget</string>
    <string name="key_maxBudget">prefKey_maxBudget</string>
    <!-- EDIT PROFILE SETTINGS -->

    <!-- LOGIN -->
    <string name="title_activity_login">HOMiE Login</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_register_short">Register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="registration_greeting">Create an account to find your new roommate! You can complete your profile later.</string>
    <string name="registration_button">Create my account</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_email">Not a valid email</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="menu_item_logout">LOGOUT</string>
    <string name="menu_item_login">LOGIN</string>
    <string name="menu_item_profile">Profile</string>
    <string name="match_empty_warning"><b>Oh No!</b>\n\nYou don\'t have any Homies to match with!\nMaybe update your profile first?\n<b>→</b></string>
    <!-- LOGIN -->

</resources>
