<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="10dp"
    android:paddingTop="30dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView_ProfilePhoto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/field_ProfilePhoto_text" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:orientation="horizontal">

            <LinearLayout
                style="?android:attr/buttonBarStyle"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/photoView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:contentDescription="@string/avatar_description"
                    android:src="@drawable/ic_profile_24px" />

                <Button
                    android:id="@+id/button_ChangePhoto"
                    style="?android:attr/buttonBarButtonStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:onClick="onChangePhotoClicked"
                    android:text="@string/button_ChangePhoto_text" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView_Email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/field_Email_text" />

                <EditText
                    android:id="@+id/editText_Email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/edit_Email_hint"
                    android:inputType="textEmailAddress" />

                <TextView
                    android:id="@+id/textView_Password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/field_Password_text" />

                <EditText
                    android:id="@+id/editText_Password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/edit_Password_hint"
                    android:inputType="textPassword" />

            </LinearLayout>
        </LinearLayout>

        <TextView
            android:id="@+id/textView_Name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/field_Name_text" />

        <EditText
            android:id="@+id/editText_Name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/edit_Name_hint"
            android:inputType="textPersonName" />

        <TextView
            android:id="@+id/textView_Address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/field_Address_text" />

        <EditText
            android:id="@+id/editTextPostalAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPostalAddress"
            android:hint="@string/edit_Address_hint"/>

        <TextView
            android:id="@+id/textView_Radius"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/field_Radius_text" />

        <EditText
            android:id="@+id/editTextRadius"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/edit_Radius_hint"
            android:inputType="number" />

        <TextView
            android:id="@+id/textView_Budget"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/field_Budget_text" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/editBudgetMin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="number"
                android:hint="@string/edit_BudgetMin_hint"/>

            <EditText
                android:id="@+id/editBudgetMax"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="number"
                android:hint="@string/edit_BudgetMax_hint"/>
        </LinearLayout>

        <TextView
            android:id="@+id/textView_GenderPref"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/field_GenderPref_text" />

        <RadioGroup
            android:id="@+id/radioGroup_gender"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/radioButton_female"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="20dp"
                android:onClick="onGenderRadioToggled"
                android:paddingHorizontal="10dp"
                android:text="@string/radio_Female_text" />

            <RadioButton
                android:id="@+id/radioButton_male"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:onClick="onGenderRadioToggled"
                android:paddingHorizontal="10dp"
                android:text="@string/radio_Male_text" />

            <RadioButton
                android:id="@+id/radioButton_nopref"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:onClick="onGenderRadioToggled"
                android:paddingHorizontal="10dp"
                android:text="@string/radio_NoPref_text" />

        </RadioGroup>


        <TextView
            android:id="@+id/textView_HousingSearchOptions"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/field_HousingSearchOptions_text" />

        <Spinner
            android:id="@+id/spinnerNeedHousing"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            android:entries="@array/spinner_HousingSearchOptions"
            android:prompt="@string/field_HousingSearchOptions_text" />

        <TextView
            android:id="@+id/textView_HousingImageView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/field_HousingImage_text" />

        <ImageView
            android:id="@+id/imageViewHousing"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/dart0" />
        <Button
            android:id="@+id/button_ChangeHousingPhoto"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:onClick="onChangeHousingPhotoClicked"
            android:text="@string/button_ChangeHousingPhoto_text" />

        <Switch
            android:id="@+id/switchPetFriendly"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/switch_PetFriendly" />

        <Switch
            android:id="@+id/switchNoneSmoking"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/switch_NoneSmoking" />

        <Switch
            android:id="@+id/switchPrivateBathroom"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/switch_PrivateBathroom" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textBio"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/bio"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Tell your future roommate about yourself!" />
        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            style="?android:attr/buttonBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginHorizontal="35dp"
            android:layout_marginVertical="10dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/button_Save"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="165dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="2dp"
                android:onClick="onSaveClicked"
                android:paddingHorizontal="25dp"
                android:text="@string/button_Save_text" />

            <Button
                android:id="@+id/button_Cancel"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="165dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="2dp"
                android:onClick="onCancelClicked"
                android:paddingHorizontal="25dp"
                android:text="@string/button_Cancel_text" />
        </LinearLayout>

        <Button
            android:id="@+id/button_Logout"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:onClick="onLogoutClicked"
            android:text="Logout" />

    </LinearLayout>


</ScrollView>



