<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="ui.chats.ChatFragment"
    android:layout_width="match_parent"
    android:windowSoftInputMode="adjustResize"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:windowSoftInputMode="adjustResize"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="64dp"
            android:layout_margin="8dp"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/chatButtonBackView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginRight="5dp"
                android:layout_weight="1"
                android:contentDescription="@string/chat_back_button_description"
                android:src="@drawable/ic_back_24px"
                tools:ignore="RtlHardcoded" />


            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/chatAvatarImageView"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_gravity="center_vertical"
                android:layout_marginRight="8dp"
                android:layout_weight="1"
                android:contentDescription="@string/avatar_description"
                android:src="@drawable/ic_profile_24px"
                app:shapeAppearanceOverlay="@style/roundedImageViewOval"
                tools:ignore="RtlHardcoded" />

            <TextView
                android:id="@+id/chatNameTextView"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_gravity="center_vertical"
                android:layout_weight="4"
                android:ellipsize="end"
                android:gravity="center_vertical"
                android:maxLines="1"
                android:scrollHorizontally="true"
                android:textSize="24sp"
                android:textStyle="bold" />
        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/chatRecyclerView"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_gravity="top"
            android:layout_marginBottom="10dp"
            android:overScrollMode="never"
            android:layout_weight="1">

        </androidx.recyclerview.widget.RecyclerView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_marginHorizontal="8dp"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/chatTextInputView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:layout_weight="7"
                android:ems="10"
                android:hint="@string/chat_input_hint"
                android:importantForAutofill="no"
                android:inputType="textMultiLine"
                tools:ignore="RtlHardcoded" />

            <ImageButton
                android:id="@+id/chatButtonSendView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:layout_weight="1"
                android:contentDescription="@string/chat_send_button_description"
                android:src="@drawable/ic_send_24px"
                tools:srcCompat="@tools:sample/avatars" />

        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>